force-app/main/default/objects/Budget_Currency_Rate__c/Budget_Currency_Rate__c.object-meta.xml
<CustomObject>
    <label>שער לתקציב</label>
    <nameField>
        <displayFormat>BCR-{00000}</displayFormat>
        <label>שער לתקציב</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>שערים לתקציב</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>