force-app/main/default/objects/Budget_Currency_Rate__c/fields/Budget_Year__c.field-meta.xml
<CustomField>
    <fullName>Budget_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>שנת תקציב</label>
    <referenceTo>Budget_Year__c</referenceTo>
    <relationshipLabel>שערים לתקציב</relationshipLabel>
    <relationshipName>Budget_Currency_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>