force-app/main/default/objects/Budget_Currency_Rate__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>מטבע</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Novidea_HPC__Currencies</valueSetName>
    </valueSet>
</CustomField>